# venue-research-agentic-workflow

./: .gitignore  README.md  crewai_flow.html  requirements.txt  venue_search.ipynb  venue_search_flow.py
venue_score_flow/: README.md  pyproject.toml  venue_search_results.json
venue_score_flow/src/venue_score_flow/: constants.py  main.py  streamlit_app.py  types.py  venue_search_results.json
venue_score_flow/src/venue_score_flow/crews/venue_reponse_crew/: venue_response_crew.py
venue_score_flow/src/venue_score_flow/crews/venue_score_crew/: venue_score_crew.py
venue_score_flow/src/venue_score_flow/crews/venue_score_crew/config/: tasks.yaml  (+1 more)
venue_score_flow/src/venue_score_flow/crews/venue_search_crew/: __init__.py  venue_search_crew.py
venue_score_flow/src/venue_score_flow/utils/: venuUtils.py  venueUtils.py
venue_search_flow/: README.md  pyproject.toml  setup.py
venue_search_flow/src/venue_search_crew/config/: tasks.yaml
venue_search_flow/src/venue_search_flow/: flow_output.json  main.py  streamlit_app.py
venue_search_flow/src/venue_search_flow/crews/venue_search_crew/: venue_search_crew.py
venue_search_flow/src/venue_search_flow/generated_reports/: email_generation_output.json  feature_extraction_output.json  location_analysis_output.json  venue_scoring_output.json
venue_search_flow/src/venue_search_flow/models/: venue_models.py
venue_search_flow/src/venue_search_flow/outputs/search_20241228_191424/: raw_output.json
venue_search_flow/src/venue_search_flow/tools/: venue_tools.py
venue_search_flow/src/venue_search_flow/utils/: config_loader.py
(+91 files in other folders)
