[project]
name = "venue_search_flow"
version = "0.1.0"
description = "venue_search_flow using crewAI"
authors = [{ name = "Dolu Obatusin", email = "dolu.obatusin@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
]

[project.scripts]
kickoff = "venue_search_flow.main:kickoff"
plot = "venue_search_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
